// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "və kiŋ siːz və wʊlf",
    },
    {
      "english": "the dogs see the wolves",
      "target": "və bɔbɔg siː və wʊwʊlf",
    },
    {
      "english": "i give you the bread",
      "target": "aj gɪvɪŋ ju",
    },
    {
      "english": "the king walks at the river",
      "target": "və kiŋ wɔkɪŋz at və divəd",
    },
    {
      "english": "the king does not see the wolf",
      "target": "və kiŋ nat siːz və wʊlf",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "reːgeː βideret lupuum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "kaneːi βiderent lupuium",
    },
    {
      "english": "i give you the bread",
      "target": "ego dareo tuum",
    },
    {
      "english": "the king walks at the river",
      "target": "reːgeː ambulareːt flumeː",
    },
    {
      "english": "the king does not see the wolf",
      "target": "reːgeː non βideret lupuum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "seːwe luken soweːle",
    },
    {
      "english": "the dogs see the wolves",
      "target": "sosoweːle luken sosoweːle",
    },
    {
      "english": "i give you the bread",
      "target": "mi pana sina",
    },
    {
      "english": "the king walks at the river",
      "target": "seːwe kawa sake telo",
    },
    {
      "english": "the king does not see the wolf",
      "target": "seːwe ala luken soweːle",
    },
  ],
  "preset": "tokipona",
}
`;
